switched to latest moonlight version + added empty data management